Fixed to handle binary files

--- a/apex-zip/src/classes/UnzipDemoController.cls
+++ b/apex-zip/src/classes/UnzipDemoController.cls
@@ -61,7 +61,7 @@ public with sharing class UnzipDemoController
 		
 		// Attach unzipped file
 		Attachment attachment = new Attachment();
-		attachment.Body = Blob.valueOf(data);
+		attachment.Body = EncodingUtil.base64Decode(data);
 		attachment.Name = path;
 		attachment.ParentId = state;
 		insert attachment;
